Now showing skill descriptions in popovers in track outline. We should also preview the first line directly in the list but there were issues with the text-overflow: ellipsis property...

--- a/css/mook-front.css
+++ b/css/mook-front.css
@@ -68,6 +68,13 @@ a, a:hover {
 	border: 0;
 }
 
+.popover {
+	max-width: 40%;
+}
+.popover-content {
+	font-size: .8em;
+}
+
 
 /** BREADCRUMB **/
 
